--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -166,3 +166,867 @@
 换羽移宫万里愁，珠歌翠舞古梁州。
 为君别唱吴宫曲，汉水东南日夜流！
 ```
+
+## 以下是《红楼梦》中的全部诗词
+
+### 金陵十二钗（正册）
+```
+林黛玉/薛宝钗：
+    可叹停机德（宝钗），堪怜咏絮才（黛玉）。
+    玉带林中挂（黛玉），金簪雪里埋（宝钗）。
+贾元春：
+    二十年来辨是非，榴花开处照宫闱。
+    三春争及初春景，虎兕相逢大梦归。
+贾探春：
+    才自精明志自高，生于末世运偏消。
+    清明涕泣江边望，千里东风一梦遥。
+史湘云：
+    富贵又何为?襁褓之间父母违。
+    展眼吊斜辉，湘江水逝楚云飞。
+妙玉：
+    欲洁何曾洁?云空未必空。
+    可怜金玉质，终陷淖泥中。
+王熙凤：
+    凡鸟偏从末世来，都知爱慕此生才。
+    一从二令三人木，哭向金陵事更哀。
+贾惜春：
+    堪破三春景不长，缁衣顿改昔年装。
+    可怜绣户侯门女，独卧青灯古佛旁。
+贾迎春：
+    子系中山狼，得志便猖狂。
+    金闺花柳质，一载赴黄粱。
+巧姐：
+    势败休云贵，家亡莫论亲。
+    偶因济村妇，巧得遇恩人。
+李纨：
+    桃李春风结子完，到头谁似一盆兰。
+    如冰水好空相妒，枉与他人作笑谈。
+秦可卿：
+    情天情海幻情深，情既相逢必主淫。
+    漫言不肖皆荣出，造衅开端实在宁。
+```
+
+### 《红楼梦》十二支曲
+> 
+> 《引子》
+> 开辟鸿蒙,谁为情种?都只为风月情浓.趁着这奈何天,伤怀日,寂寥时,试遣愚衷.因此上演出这怀金悼玉的<<红楼梦>>.
+>
+```
+[终身误]
+都道是金玉良姻, 俺只念木石前盟.
+空对着,山中高士晶莹雪,
+终不忘,世外仙姝寂寞林.
+叹人间,美中不足今方信.
+纵然是齐眉举案,到底意难平.(黛玉,宝钗)
+
+[枉凝眉]
+一个是阆苑仙葩,一个是美玉无瑕.
+若说没奇缘, 今生偏又遇着他,若说有奇缘,如何心事终虚化?
+一个枉自嗟呀,一个空劳牵挂.一个是水中月,一个是镜中花.
+想眼中能有多少泪珠儿,怎经得秋流到冬尽,春流到夏!(黛玉,宝玉)
+
+[恨无常]
+喜荣华正好,恨无常又到.
+眼睁睁,把万事全抛.
+荡悠悠,把芳魂消耗.
+望家乡,路远山高.
+故向爹娘梦里相寻告:儿命已入黄泉,天伦呵,须要退步抽身早!（元春）
+
+[分骨肉]
+一帆风雨路三千,把骨肉家园齐来抛闪.
+恐哭损残年,告爹娘,休把儿悬念.
+自古穷通皆有定,离合岂无缘?
+从今分两地,各自保平安.奴去也,莫牵连.（探春）
+
+[喜冤家]
+中山狼,无情兽,全不念当日根由.
+一味的骄奢淫荡贪还构.
+觑着那,侯门艳质同蒲柳,作践的,公府千金似下流.
+叹芳魂艳魄,一载荡悠悠.（迎春）
+
+[世难容]
+气质美如兰,才华复比仙.天生成孤癖人皆罕.
+你道是啖肉食腥膻,视绮罗俗厌,却不知太高人愈妒,过洁世同嫌.
+可叹这,青灯古殿人将老,辜负了,红粉朱楼春色阑.
+到头来,依旧是风尘肮脏违心愿.
+好一似,无瑕白玉遭泥陷,又何须,王孙公子叹无缘.（妙玉）
+
+[乐中悲]
+襁褓中,父母叹双亡.纵居那绮罗丛,谁知娇养?
+幸生来,英豪阔大宽宏量,从未将儿女私情略萦心上.
+好一似,霁月光风耀玉堂.
+厮配得才貌仙郎,博得个地久天长,准折得幼年时坎坷形状.
+终久是云散高唐,水涸湘江.
+这是尘寰中消长数应当,何必枉悲伤!（湘云）
+
+[虚花悟]
+将那三春看破,桃红柳绿待如何?把这韶华打灭,觅那清淡天和.
+说什么,天上夭桃盛,云中杏蕊多.到头来,谁把秋捱过?
+则看那,白杨村里人呜咽,青枫林下鬼吟哦.更兼着,连天衰草遮坟墓.
+这的是,昨贫今富人劳碌,春荣秋谢花折磨.似这般,生关死劫谁能躲?
+闻说道,西方宝树唤婆娑,上结着长生果.（惜春）
+
+[聪明累]
+机关算尽太聪明,反算了卿卿性命.
+生前心已碎,死后性空灵.家富人宁,终有个家亡人散各奔腾.
+枉费了,意悬悬半世心,好一似,荡悠悠三更梦.
+忽喇喇似大厦倾,昏惨惨似灯将尽.
+呀!一场欢喜忽悲辛.叹人世,终难定!（凤姐）
+
+[留余庆]
+留余庆,留余庆,忽遇恩人,幸娘亲,幸娘亲, 积得阴功.
+劝人生,济困扶穷,休似俺那爱银钱忘骨肉的狠舅奸兄!
+正是乘除加减,上有苍穹.（巧姐）
+
+[好事终]
+画梁春尽落香尘.擅风情,秉月貌,便是败家的根本.
+箕裘颓堕皆从敬,家事消亡首罪宁.宿孽总因情.（秦可卿）
+
+[晚韶华]
+镜里恩情,更那堪梦里功名!那美韶华去之何迅!再休提锈帐鸳衾.
+只这带珠冠,披凤袄,也抵不了无常性命.
+虽说是,人生莫受老来贫,也须要阴骘积儿孙.
+气昂昂头戴簪缨,光灿灿胸悬金印,威赫赫爵禄高登,昏惨惨黄泉路近.
+问古来将相可还存?也只是虚名儿与后人钦敬.（李纨）
+
+[收尾-飞鸟各投林]
+为官的,家业凋零,
+（湘云）富贵的,金银散尽, 
+（宝钗）有恩的,死里逃生,
+（巧姐）无情的,分明报应.
+（妙玉）欠命的,命已还,
+（迎春）欠泪的,泪已尽.
+（黛玉）冤冤相报实非轻,
+（秦可卿）分离聚合皆前定.
+（探春）欲知命短问前生,
+（元春）老来富贵也真侥幸.
+（李纨）看破的,遁入空门,
+（惜春）痴迷的,枉送了性命.
+（凤姐）好一似食尽鸟投林,落了片白茫茫大地真干净!
+```
+
+### 大观园题咏
+```
+元春
+    衔山抱水建来精，多少工夫筑始成！
+    天上人间诸景备，芳园应锡“大观”名。
+旷性怡情匾额-迎春
+    园成景备特精奇，奉命羞题额旷怡。
+    谁信世间有此境，游来宁不畅神思?
+文章造化匾额-惜春
+    山水横拖千里外，楼台高起五云中。
+    园修日月光辉里，景夺文章造化功。
+万象争辉匾额-探春
+    名园筑出势巍巍，奉命何惭学浅微。
+    精妙一时言不出，果然万物生光辉。
+文采风流匾额-李纨
+    秀水明山抱复回，风流文采胜蓬莱。
+    绿裁歌扇迷芳草，红衬湘裙舞落梅。
+    珠玉自应传盛世，神仙何幸下瑶台。
+    名园一自邀游赏，未许凡人到此来。
+凝晖钟瑞匾额-薛宝钗
+    芳园筑向帝城西，华日祥云笼罩奇。
+    高柳喜迁莺出谷，修篁时待凤来仪。
+    文风已著宸游夕，孝化应隆归省时。
+    睿藻仙才盈彩笔，自惭何敢再为辞。
+世外仙源匾额-林黛玉
+    名园筑何处，仙境别红尘。
+    借得山川秀,，添来景物新。
+    香融金谷酒，花媚玉堂人。
+    何幸邀恩宠，宫车过往频。
+宝玉
+  有凤来仪
+    秀玉初成实，堪宜待凤凰。
+    竿竿青欲滴，个个绿生凉。
+    迸砌妨阶水，穿帘碍鼎香。
+    莫摇清碎影，好梦昼初长。
+  怡红快绿
+    深庭长日静，两两出婵娟。
+    绿蜡春犹卷，红妆夜未眠。
+    凭栏垂绛袖，倚石护青烟。
+    对立东风里，主人应解怜。
+  蘅芷清芬
+    蘅芜满净苑，萝薜助芬芳。
+    软衬三春草，柔拖一缕香。
+    轻烟迷曲径，冷翠滴回廊。
+    谁谓池塘曲，谢家幽梦长。
+  杏帘在望
+    杏帘招客饮，在望有山庄。
+    菱荇鹅儿水，桑榆燕子梁。
+    一畦春韭绿，十里稻花香。
+    盛世无饥馁，何须耕织忙。
+```
+
+### 葬花词
+```
+黛玉
+花谢花飞花满天，红消香断有谁怜?
+游丝软系飘春榭，落絮轻沾扑绣帘。
+闺中女儿惜春暮，愁绪满怀无释处。
+手把花锄出绣闺，忍踏落花来复去。
+柳丝榆荚自芳菲，不管桃飘与李飞。
+桃李明年能再发，明年闺中知有谁?
+三月香巢已垒成，梁间燕子太无情!
+明年花发虽可啄，却不道人去梁空巢也倾。
+一年三百六十日，风刀霜剑严相逼。
+明媚鲜妍能几时，一朝飘泊难寻觅。
+花开易见落难寻，阶前愁杀葬花人。
+独倚花锄泪暗洒，洒上空枝见血痕。
+杜鹃无语正黄昏，荷锄归去掩重门。
+青灯照壁人初睡，冷雨敲窗被未温。
+怪奴底事倍伤神，半为怜春半恼春。
+怜春忽至恼忽去，至又无言去不闻。
+昨宵庭外悲歌发，知是花魂与鸟魂?
+花魂鸟魂总难留，鸟自无言花自羞。
+愿奴胁下生双翼，随花飞到天尽头。
+天尽头，何处有香丘?
+未若锦囊收艳骨，一抔净土掩风流。
+质本洁来还洁去，强于污淖陷渠沟。
+尔今死去侬收葬，未卜侬身何日丧?
+侬今葬花人笑痴，他年葬侬知是谁?
+试看春残花渐落，便是红颜老死时。
+一朝春尽红颜老，花落人亡两不知!
+```
+
+### 咏白海棠
+```
+探春
+    斜阳寒草带重门，苔翠盈铺雨后盆。
+    玉是精神难比洁，雪为肌骨易销魂。
+    芳心一点娇无力，倩影三更月有痕。
+    莫谓缟仙能羽化，多情伴我咏黄昏。
+宝钗
+    珍重芳姿昼掩门，自携手瓮灌苔盆。
+    胭脂洗出秋阶影，冰雪招来露砌魂。
+    淡极始知花更艳，愁多焉得玉无痕。
+    欲偿白帝凭清洁，不语婷婷日又昏。
+宝玉
+    秋容浅淡映重门，七节攒成雪满盆。
+    出浴太真冰作影，捧心西子玉为魂。
+    晓风不散愁千点，宿雨还添泪一痕。
+    独倚画栏如有意，清砧怨笛送黄昏。
+黛玉
+    半卷湘帘半掩门，碾冰为土玉为盆。
+    偷来梨蕊三分白，借得梅花一缕魂。
+    月窟仙人缝缟袂，秋闺怨女拭啼痕。
+    娇羞默默同谁诉，倦倚西风夜已昏。
+湘云
+  其一
+    神仙昨日降都门，种得蓝田玉一盆。
+    自是霜娥偏爱冷，非关倩女亦离魂。
+    秋阴捧出何方雪，雨渍添来隔宿痕。
+    却喜诗人吟不倦，岂令寂寞度朝昏。
+  其二
+    蘅芷阶通萝薜门，也宜墙角也宜盆。
+    花因喜洁难寻偶，人为悲秋易断魂。
+    玉烛滴干风里泪，晶帘隔破月中痕。
+    幽情欲向嫦娥诉，无奈虚廊夜色昏。
+```
+
+### 书中各人物诗号对应表
+|  名字  |  诗号  |
+|   -   |   -   |
+| 林黛玉 | 潇湘妃子 |
+| 贾宝玉 | 怡红公子 |
+| 薛宝钗 | 蘅芜君 |
+| 贾探春 | 蕉下客 |
+| 史湘云 | 枕霞旧友 |
+| 李纨 | 稻香老农 |
+| 贾迎春 | 菱洲 |
+| 贾惜春 | 藕榭 |
+
+### 菊花诗
+```
+忆菊-蘅芜君
+    怅望西风抱闷思，蓼红苇白断肠时。
+    空篱旧圃秋无迹，瘦月清霜梦有知。
+    念念心随归雁远，寥寥坐听晚砧痴。
+    谁怜我为黄花病，慰语重阳会有期。
+种菊-怡红公子
+    携锄秋圃自移来，篱畔庭前故故栽。
+    昨夜不期经雨活，今朝犹喜带霜开。
+    冷吟秋色诗千首，醉酹寒香酒一杯。
+    泉溉泥封勤护惜，好知井径绝尘埃。
+供菊-枕霞旧友
+    弹琴酌酒喜堪俦，几案婷婷点缀幽。
+    隔座香分三径露，抛书人对一枝秋。
+    霜清纸帐来新梦，圃冷斜阳忆旧游。
+    傲世也因同气味，春风桃李未淹留。
+画菊-蘅芜君
+    诗余戏笔不知狂，岂是丹青费较量。
+    聚叶泼成千点墨，攒花染出几痕霜。
+    淡浓神会风前影，跳脱秋生腕底香。
+    莫认东篱闲采掇，粘屏聊以慰重阳。
+簪菊-蕉下客
+    瓶供篱栽日日忙，折来休认镜中妆。
+    长安公子因花癖，彭泽先生是酒狂。
+    短鬓冷沾三径露，葛巾香染九秋霜。
+    高情不入时人眼，拍手凭他笑路旁。
+菊梦-潇湘妃子
+    篱畔秋酣一觉清，和云伴月不分明。
+    登仙非慕庄生蝶，忆旧还寻陶令盟。
+    睡去依依随雁断，惊回故故恼蛩鸣。
+    醒时幽怨同谁诉，衰草寒烟无限情。
+访菊-怡红公子
+    闲趁霜晴试一游，酒杯药盏莫淹留。
+    霜前月下谁家种，槛外篱边何处愁。
+    蜡屐远来情得得，冷吟不尽兴悠悠。
+    黄花若解怜诗客，休负今朝挂杖头。
+对菊-枕霞旧友
+    别圃移来贵比金，一丛浅淡一丛深。
+    萧疏篱畔科头坐，清冷香中抱膝吟。
+    数去更无君傲世，看来惟有我知音。
+    秋光荏苒休辜负，相对原宜惜寸阴。
+咏菊-潇湘妃子
+    无赖诗魔昏晓侵，绕篱欹石自沉音。
+    毫端蕴秀临霜写，口齿噙香对月吟。
+    满纸自怜题素怨，片言谁解诉秋心。
+    一从陶令平章后，千古高风说到今。
+问菊-潇湘妃子
+    欲讯秋情众莫知，喃喃负手叩东篱。
+    孤标傲世偕谁隐，一样花开为底迟?
+    圃露庭霜何寂寞，鸿归蛩病可相思?
+    休言举世无谈者，解语何妨片语时。
+菊影-枕霞旧友
+    秋光叠叠复重重，潜度偷移三径中。
+    窗隔疏灯描远近，篱筛破月锁玲珑。
+    寒芳留照魂应驻，霜印传神梦也空。
+    珍重暗香休踏碎，凭谁醉眼认朦胧。
+残菊-蕉下客
+    露凝霜重渐倾欹，宴赏才过小雪时。
+    蒂有余香金淡泊，枝无全叶翠离披。
+    半床落月蛩声病，万里寒云雁阵迟。
+    明岁秋风知再会， 暂时分手莫相思。
+```
+
+### 咏柳词
+```
+如梦令-湘云
+    岂是绣绒残吐，卷起半帘香雾，纤手自拈来，空使鹃啼燕妒。
+    且住，且住!莫使春光别去。
+西江月-宝琴
+    汉苑零星有限，隋堤点缀无穷，三春事业付东风，明月梅花一梦。
+    几处落红庭院，谁家香雪帘栊?江南江北一般同,，偏是离人恨重!
+唐多令-黛玉
+    粉堕百花州，香残燕子楼。一团团逐对成逑，飘泊亦如人命薄，空缱绻，说风流。
+    草木也知愁，韶华竟白头!叹今生谁舍谁收?嫁与东风春不管。凭尔去，忍淹留。
+临江仙-宝钗
+    白玉堂前春解舞， 东风卷得均匀。蜂团蝶阵乱纷纷，几曾随逝水，岂必委芳尘。
+    万缕千丝终不改，任他随聚随分。韶华休笑本无根，好风凭借力,，送我上青云!
+```
+
+### 食螃蟹咏
+```
+宝玉
+    持螯更喜桂阴凉，泼醋擂姜兴欲狂。
+    饕餮王孙应有酒，横行公子却无肠。
+    脐间积冷馋忘忌，指上沾腥洗尚香。
+    原为世人美口腹,，坡仙曾笑一生忙。
+宝钗
+    桂霭桐阴坐举殇，长安涎口盼重阳。
+    眼前道路无经纬，皮里春秋空黑黄。
+    酒未敌腥还用菊，性防积冷定须姜。
+    于今落釜成何益，月浦空余禾黍香。
+黛玉
+    铁甲长戈死未忘，堆盘色相喜先尝。
+    螯封嫩玉双双满，壳凸红脂块块香。
+    多肉更怜卿八足，助情谁劝我千觞。
+    对斯佳品酬佳节，桂拂清风菊带霜。
+```
+
+### 联诗
+```
+芦雪庵争联即景诗
+
+一夜北风紧，凤姐
+开门雪尚飘。入泥怜洁白，李纨
+匝地惜琼瑶。有意荣枯草，香菱
+无心饰萎苕。价高村酿熟，探春
+年稔府粱饶。葭动灰飞管，李绮
+阳回斗转杓。寒山已失翠，李纹
+冻浦不闻潮。易挂疏枝柳，邢岫烟
+难堆破叶蕉。麝煤融宝鼎，湘云
+绮袖笼金貂。光夺窗前镜，宝琴
+香粘壁上椒。斜风仍故故，黛玉
+清梦转聊聊。何处梅花笛?宝玉
+谁家碧玉箫? 鳌愁坤轴陷，宝钗
+龙斗阵云销。野岸回孤棹，湘云
+吟鞭指灞桥。赐裘怜抚戍，宝琴
+加絮念征徭。坳垤审夷险，湘云
+枝柯怕动摇。皑皑轻趁步，宝钗
+翦翦舞随腰。 煮芋成新赏，黛玉
+撒盐是旧谣。苇蓑犹泊钓，宝玉
+林斧不闻樵。伏象千峰凸，宝琴
+盘蛇一径遥。花缘经冷聚，湘云
+色岂畏霜凋。深院惊寒雀，探春
+空山泣老鴞。阶墀随上下，邢岫烟
+池水任浮漂。照耀临清晓，湘云
+缤纷入永宵。诚忘三尺冷，黛玉
+瑞释九重焦。僵卧谁相问，湘云
+狂游客喜招。天机断缟带，宝琴
+海市失鲛绡。湘云
+寂寞对台榭，黛玉
+清贫怀箪瓢。湘云
+烹茶冰渐沸，宝琴
+煮酒叶难烧。湘云
+没帚山僧扫，黛玉
+埋琴稚子挑。宝琴
+石楼闲睡鹤，湘云
+锦罽暖亲猫。黛玉
+月窟翻银浪，宝琴
+霞城隐赤标。湘云
+沁梅香可嚼，黛玉
+淋竹醉堪调。宝钗
+或湿鸳鸯带，宝琴
+时凝翡翠翘。湘云
+无风仍脉脉，黛玉
+不雨亦潇潇。宝琴
+欲志今朝乐，李纨
+凭诗祝舜尧。李绮
+```
+
+### 三人吟红梅花
+```
+"红"字
+  邢岫烟
+    桃未芳菲杏未红，冲寒先已笑东风。
+    魂飞庾岭春难辨，霞隔罗浮梦未通。
+    绿萼添妆融宝炬，缟仙扶醉跨残虹。
+    看来岂是寻常色，浓淡由他冰雪中。
+"梅"字
+  李纹
+    白梅懒赋赋红梅，逞艳先迎醉眼开。
+    冻脸有痕皆是血，醉心无恨亦成灰。
+    误吞丹药移真骨，偷下瑶池脱旧胎。
+    江北江南春灿烂，寄言蜂蝶漫疑猜。
+"花"字
+  薛宝琴
+    疏是枝条艳是花，春妆儿女竞奢华。
+    闲庭曲槛无余雪，流水空山有落霞。
+    幽梦冷随红袖笛，游仙香泛绛河槎。
+    前身定是瑶台种，无复相疑色相差。
+
+  中秋黛玉湘云即景联诗
+    三五中秋夕，（黛玉）
+    清游拟上元。撒天箕斗灿，（湘云）
+    匝地管弦繁。几处狂飞盏，（黛玉）
+    谁家不启轩。轻寒风剪剪，（湘云）
+    良夜景暄暄。争饼嘲黄发，（黛玉）
+    分瓜笑绿嫒。香新荣玉桂，（湘云）
+    色健茂金萱。蜡烛辉琼宴，（黛玉）
+    觥筹乱绮园。分曹尊一令，（湘云）
+    射覆听三宣。骰彩红成点，（黛玉）
+    传花鼓滥喧。晴光摇院宇，（湘云）
+    素彩接乾坤。赏罚无宾主，（黛玉）
+    吟诗序仲昆。构思时倚槛，（湘云）
+    拟景或依门。酒尽情犹在，（黛玉）
+    更残乐已谖。渐闻语笑寂，（湘云）
+    空剩雪霜痕。阶露团朝菌，（黛玉）
+    庭烟敛夕昏。秋湍泻石髓，（湘云）
+    风叶聚云根。宝婺情孤洁，（黛玉）
+    银蟾气吐吞。药经灵兔捣，（湘云）
+    人向广寒奔。犯斗邀牛女，（黛玉）
+    乘槎待帝孙。虚盈轮莫定，（湘云）
+    晦朔魄空存。壶漏声将涸，（黛玉）
+    窗灯焰已昏。寒塘渡鹤影，（湘云）
+    冷月葬花魂（黛玉）
+    妙玉中秋夜栊翠庵续写联句
+    香篆销金鼎，脂冰腻玉盆。
+    箫增嫠妇泣，衾倩侍儿温。
+    空帐悬文凤，闲屏掩彩鸳。
+    露浓苔更滑，霜重竹难扪。
+    犹步萦纡沼，还登寂历原。
+    石奇神鬼搏，木怪虎狼蹲。
+    赑屃朝光透，罘（fú）罳（sī）晓露屯。
+    振林千树鸟，啼谷一声猿。
+    歧熟焉忘径，泉知不问源。
+    钟鸣栊翠寺，鸡唱稻香村。
+    有兴悲何继，无愁意岂烦。
+    芳情只自遣，雅趣向谁言。
+    彻旦休云倦，烹茶更细论。
+```
+
+### 怀古诗
+```
+薛宝琴
+赤壁怀古
+    赤壁沉埋水不流，徒留名姓载空舟。
+    喧阗一炬悲风冷，无限英魂在内游。
+交趾怀古
+    铜铸金镛振纪纲，声传海外播戎羌。
+    马援自是功劳大，铁笛无烦说子房。
+钟山怀古
+    名利何曾伴汝身，无端被诏出凡尘。
+    牵连大抵难休绝，莫怨他人嘲笑频。
+淮阴怀古
+    壮士须防恶犬欺，三齐位定盖棺时。
+    寄言世俗休轻鄙，一饭之恩死也知。
+广陵怀古
+    蝉噪鸦栖转眼过，隋堤风景近如何。
+    只缘占得风流号，惹得纷纷口舌多。
+桃叶渡怀古
+    衰草闲花映浅池，桃枝桃叶总分离。
+    六朝梁栋多如许，小照空悬壁上题。
+青冢怀古
+    黑水茫茫咽不流，冰弦拨尽曲中愁。
+    汉家制度诚堪叹，樗栎应惭万古羞。
+马嵬怀古
+    寂寞脂痕渍汗光，温柔一旦付东洋。
+    只因遗得风流迹，此日衣衾尚有香。
+蒲东寺怀古
+    小红骨践最身轻，私掖偷携强撮成。
+    虽被夫人时吊起，已经勾引彼同行。
+梅花观怀古
+    不在梅边在柳边，个中谁拾画婵娟。
+    团圆莫忆春香到，一别西风又一年。
+```
+
+### 香菱学诗
+```
+香菱吟月精华
+
+精华欲掩料应难，影自娟娟魄自寒。
+一片砧敲千里白，半轮鸡唱五更残。
+绿蓑江上秋闻笛，红袖楼头夜倚栏。
+博得嫦蛾应借问，缘何不使永团圆!
+```
+
+### 芙蓉女儿诔
+```
+宝玉
+
+维太平不易之元，蓉桂竞芳之月，无可奈何之日，
+怡红院浊玉，
+谨以群花之蕊，冰鲛之觳，沁芳之泉，枫露之茗，
+四者虽微，聊以达诚申信，
+乃致祭于白帝宫中抚司秋艳芙蓉女儿之前曰：
+
+窃思女儿自临浊世，迄今凡十有六载。
+其先之乡籍姓氏，湮沦而莫能考者久矣。
+而玉得于衾枕栉沐之间，栖息宴游之夕，
+亲昵狎亵，相与共处者，仅五年八月有畸。
+忆女儿曩生之昔，
+其为质则金玉不足喻其贵，
+其为性则冰雪不足喻其洁，
+其为神则星日不足喻其精，
+其为貌则花月不足喻其色，
+姊妹悉慕媖娴，妪媪咸仰惠德。
+孰料鸠鸩恶其高，鹰鸷翻遭罦（fú)罳；
+薋葹（cí shī）妒其臭，茝兰竟被芟锄!
+花原自怯，岂奈狂飙，柳本多愁，何禁骤雨。
+偶遭蛊虿之谗，遂抱膏肓之疚。
+故尔樱唇红褪，韵吐呻吟，杏脸香枯，
+色陈顑（kǎn）颔，诼谣謑诟，
+出自屏帏，荆棘蓬榛，蔓延户牖。
+岂招尤则替，实攘诟而终。
+既忳幽沉于不尽，复含罔屈于无穷。
+高标见嫉，闺帏恨比长沙，直烈遭危，
+巾帼惨于羽野，自蓄辛酸，谁怜夭折!
+仙云既散，芳趾难寻。
+洲迷聚窟，何来却死之香?
+海失灵槎，不获回生之药，眉黛烟青，
+昨犹我画，指环玉冷，今倩谁温?
+鼎炉之剩药犹存，襟泪之余痕尚渍。
+镜分鸾别，愁开麝月之奁，梳化龙飞，哀折檀云之齿。
+委金钿于草莽，拾翠盒于尘埃。
+楼空鳷鹊，徒悬七夕之针，带断鸳鸯，谁续五丝之缕?
+况乃金天属节，白帝司时，孤衾有梦，空室无人。
+桐阶月暗，芳魂与倩影同销，蓉帐香残，娇喘共细言皆绝。
+连天衰草，岂独蒹葭，匝地悲声，无非蟋蟀。
+露苔晚砌，穿帘不度寒砧，雨荔秋垣，隔院希闻怨笛。
+芳名未泯，檐前鹦鹉犹呼，艳质将亡，槛外海棠预老，
+捉迷屏后，莲瓣无声，斗草庭前，
+兰芽枉待，抛残绣线，银笺彩缕谁裁?
+折断冰丝，金斗御香未熨。
+昨承严命，既趋车而远涉芳园，
+今犯慈威，复拄杖而遽抛孤柩。
+及闻櫘棺被燹，惭违共穴之盟，石椁成灾，愧迨同灰之诮。
+尔乃西风古寺，淹滞青磷，落日荒丘，零星白骨。
+楸榆飒飒，蓬艾萧萧。隔雾圹以啼猿，绕烟塍而泣鬼。
+自为红绡帐里，公子情深，始信黄土垄中，女儿命薄!
+汝南泪血，斑斑洒向西风，梓泽余衷，默默诉凭冷月。
+呜呼!固鬼蜮之为灾，岂神灵而亦妒，
+钳婢奴之口，讨岂从宽，剖悍妇之心，忿犹未释!
+在君之尘缘虽浅，然玉之鄙意岂终，
+因蓄拳拳之思，不禁谆谆之问。
+始知上帝垂旌，花宫待诏，生侪兰蕙，死辖芙蓉，
+听小婢之言，似涉无稽，以浊玉之思，则深为有据。何也?
+昔叶法善摄魂以撰碑，李长吉被诏而为记，虽殊，其理则一也。
+故相物以配才，苟非其人，恶乃滥乎?
+始信上帝委托权衡，可谓至洽至协，庶不负其所秉赋也，
+因希其不昧之灵，或陟降于兹，
+特不揣鄙俗之词，有污慧听，乃歌而招之曰：
+天何如是之苍苍兮，乘玉虬以游乎穹窿耶?
+地何如是之茫茫兮，驾瑶象以降乎泉壤耶?
+望伞盖之陆离兮，抑箕尾之光耶?
+列羽葆而为前导兮，卫危虚于旁耶?
+驱丰隆以为比从兮，望舒月以离耶?
+听车轨而伊轧兮，御鸾鸥以征耶?
+问馥郁而飘然兮,纫蘅杜以为攘耶?
+炫裙裾之烁烁兮，镂明月以为铛耶?
+籍葳蕤而成坛畸兮，檠莲焰以烛兰膏耶?
+文瓠匏以为觯斝（jiǎ）兮，漉醽醁以浮桂醑耶?
+瞻云气而凝盼兮，仿佛有所觇耶?
+俯窈窕而属耳兮，恍惚有所闻耶?
+期汗漫而无夭阏兮，忍捐弃余于尘埃耶?
+倩风廉之为余驱车兮，冀联辔而携归耶?
+余中心为之慨然兮，徒叫叫而何为耶?
+君偃然而长寝兮，岂天运之变于斯耶?
+既窀穸且安稳兮，反其真而复奚化耶?
+余犹桎梏而悬附兮，灵格余以嗟来耶?
+来兮止兮，君其来耶!
+若夫鸿蒙而居，寂静以处，虽临于兹，余亦莫睹。
+搴烟萝而为步幛，列枪蒲而森行伍。
+警柳眼之贪眠，释莲心之味苦。
+素女约于桂岩，宓妃迎于兰渚。
+弄玉吹笙，寒簧击敔（yǔ）。
+征嵩岳之妃，启骊山之姥。
+龟呈洛浦之灵，兽作咸池之舞。
+潜赤水兮龙吟，集珠林兮凤翥，
+爰格爰诚，匪簠（fǔ）匪筥（jǔ）。
+发轫乎霞城，返旌乎玄圃。
+既显微而若通，复氤氲而倏阻。
+离合兮烟云，空蒙兮雾雨。
+尘霾敛兮星高，溪山丽兮月午。
+何心意之忡忡，若寤寐之栩栩。
+余乃欷嘘怅望，泣涕傍徨。
+人语兮寂历，天籁兮篔筜。
+鸟惊散而飞，鱼唼喋以响，志哀兮是祷，成礼兮期祥。
+呜呼哀哉!尚飨!
+```
+
+### 其它
+#### 五美吟
+```
+（黛玉）
+西施
+    一代倾城逐浪花，吴宫空自忆儿家.
+    效颦莫笑东村女，头白溪边尚浣纱.
+虞姬
+    肠断乌骓夜啸风，虞兮幽恨对重瞳.
+    黥彭甘受他年醢，饮剑何如楚帐中.
+明妃
+    绝艳惊人出汉宫，红颜命薄古今同.
+    君王纵使轻颜色，予夺权何畀画工?
+绿珠
+    瓦砾明珠一例抛，何曾石尉重娇娆.
+    都缘顽福前生造，更有同归慰寂寥.
+红拂
+    长揖雄谈态自殊，美人巨眼识穷途.
+    尸居余气杨公幕，岂得羁縻女丈夫.
+```
+
+#### 桃花行
+```
+黛玉
+桃花帘外东风软，桃花帘内晨妆懒。
+帘外桃花帘内人，人与桃花隔不远。
+东风有意揭帘栊，花欲窥人帘不卷。
+桃花帘外开仍旧，帘中人比桃花瘦。
+花解怜人花也愁，隔帘消息风吹透。
+风透湘帘花满庭，庭前春色倍伤情。
+闲苔院落门空掩，斜日栏杆人自凭。
+凭栏人向东风泣，茜裙偷傍桃花立。
+桃花桃叶乱纷纷，花绽新红叶凝碧。
+雾裹烟封一万株，烘楼照壁红模糊。
+天机烧破鸳鸯锦，春酣欲醒移珊枕。
+侍女金盆进水来，香泉影蘸胭脂冷。
+胭脂鲜艳何相类，花之颜色人之泪。
+若将人泪比桃花，泪自长流花自媚。
+泪眼观花泪易干，泪干春尽花憔悴。
+憔悴花遮憔悴人，花飞人倦易黄昏。
+一声杜宇春归尽，寂寞帘栊空月痕!
+```
+
+#### 秋窗风雨夕
+```
+黛玉
+秋花惨淡秋草黄，耿耿秋灯秋夜长。
+已觉秋窗秋不尽，那堪风雨助凄凉!
+助秋风雨来何速!惊破秋窗秋梦绿。
+抱得秋情不忍眠，自向秋屏移泪烛。
+泪烛摇摇爇短檠，牵愁照恨动离情。
+谁家秋院无风入?何处秋窗无雨声?
+罗衾不奈秋风力，残漏声催秋雨急。
+连宵脉脉复飕飕，灯前似伴离人泣。
+寒烟小院转萧条，疏竹虚窗时滴沥。
+不知风雨几时休，已教泪洒窗纱湿。
+```
+
+#### 抚琴曲
+```
+黛玉
+风萧萧兮秋气深，美人千里兮独沉吟。
+望故乡兮何处，倚栏杆兮涕沾襟。
+山迢迢兮水长，照轩窗兮明月光。
+耿耿不寐兮银河渺茫， 罗衫怯怯兮风露凉。
+子之遭兮不自由，予之遇兮多烦忧。
+之子与我兮心焉相投，思古人兮俾无尤。
+人生斯世兮如轻尘，天上人间兮感夙因。
+感夙因兮不可オ，素心如何天上月。
+我所居兮我所居兮，青埂之峰。
+我所游兮，鸿蒙太空。
+谁与我游兮,，吾谁与从。
+渺渺茫茫兮，归彼大荒。
+```
+
+#### 题旧帕三首
+```
+黛玉
+  其一
+    眼空蓄泪泪空垂，暗洒闲抛却为谁?
+    尺幅鲛绡劳解赠，叫人焉得不伤悲！
+  其二、
+    抛珠滚玉只偷潸，镇日无心镇日闲。
+    枕上袖边难拂拭，任他点点与斑斑。
+  其三
+    彩线难收面上珠，湘江旧迹已模糊。
+    窗前亦有千竿竹，不识香痕渍也无?
+```
+
+#### 即事诗
+```
+宝玉
+春夜即事
+    霞绡云幄任铺陈，隔巷蟆更听未真。
+    枕上轻寒窗外雨，眼前春色梦中人。
+    盈盈烛泪因谁泣，点点花愁为我嗔。
+    自是小鬟娇懒惯，拥衾不耐笑言频。
+秋夜即事
+    绛芸轩里绝喧哗，桂魄流光浸茜纱。
+    苔锁石纹容睡鹤，井飘桐露湿栖鸦。
+    抱衾婢至舒金凤，倚槛人归落翠花。
+    静夜不眠因酒渴，沉烟重拨索烹茶。
+夏夜即事
+    倦绣佳人幽梦长，金笼鹦鹉唤茶汤。
+    窗明麝月开宫镜，室霭檀云品御香。
+    琥珀杯倾荷露滑，玻璃槛纳柳风凉。
+    水亭处处齐纨动，帘卷朱楼罢晚妆。
+冬夜即事
+    梅魂竹梦已三更，锦罽（jì）鹴(shuāng)衾睡未成。
+    松影一庭惟见鹤，梨花满地不闻莺。
+    女儿翠袖诗怀冷，公子金貂酒力轻。
+    却喜侍儿知试茗，扫将新雪及时烹。
+```
+
+#### 紫菱洲伤怀
+```
+宝玉
+池塘一夜秋风冷，吹散芰荷红玉影。
+蓼花菱叶不胜愁，重露繁霜压纤梗。
+不闻永昼敲棋声，燕泥点点污棋枰。
+古人惜别怜朋友，况我今当手足情!
+```
+
+#### 读<<南华经>>偈
+```
+宝玉
+你证我证，心证意证。
+是无有证，斯可云证。
+无可云证，是立足境。
+无立足境，是方干净。(黛玉补)
+```
+
+#### 寄生草
+```
+无我原非你，从他不解伊。肆行无碍凭来去，茫茫着甚悲愁喜。
+纷纷说甚亲疏密，从前碌碌却因何。到如今回头试想真无趣!
+```
+
+#### 作者缘起
+```
+说到辛酸处,荒唐愈可悲.
+由来同一梦,休笑世人痴!
+```
+
+#### 青埂峰偈
+```
+无材可去补苍天,枉入红尘若许年.
+此系身前身后事,倩谁记去作奇传?
+```
+
+#### 作者题绝
+```
+满纸荒唐言,一把辛酸泪!
+都云作者痴,谁解其中味?
+```
+
+#### 癞头僧疯话
+```
+惯养娇生笑你痴,菱花空对雪澌澌.
+好防佳节元宵后, 便是烟消火灭时.
+```
+
+#### 癞头和尚弄玉
+```
+天不拘兮地不羁,心头无喜亦无悲,
+却因锻炼通灵后,便向人间觅是非.
+可叹你今日这番经历:
+粉渍脂痕污宝光,绮栊昼夜困鸳鸯.
+沉酣一梦终须醒,冤孽偿清好散场!
+```
+
+#### 中秋对月口占五言
+```
+贾雨村
+未卜三生愿,频添一段愁.
+闷来时敛额,行去几回头.
+自顾风前影,谁堪月下俦?
+蟾光如有意, 先上玉人楼.
+```
+
+#### 中秋对月口占一绝
+```
+贾雨村
+时逢三五便团圆,满把晴光护玉栏.
+天上一轮才捧出,人间万姓仰头看.
+```
+
+#### 好了歌
+```
+世人都晓神仙好,惟有功名忘不了!
+古今将相在何方?荒冢一堆草没了.
+世人都晓神仙好,只有金银忘不了!
+终朝只恨聚无多,及到多时眼闭了.
+世人都晓神仙好,只有姣妻忘不了!
+君生日日说恩情,君死又随人去了.
+世人都晓神仙好,只有儿孙忘不了!
+痴心父母古来多,孝顺儿孙谁见了?
+```
+
+#### 好了歌解注
+```
+甄士隐
+陋室空堂,当年笏满床,衰草枯杨,曾为歌舞场.
+蛛丝儿结满雕梁,绿纱今又糊在蓬窗上.
+说什么脂正浓,粉正香,如何两鬓又成霜?
+昨日黄土陇头送白骨,今宵红灯帐底卧鸳鸯.
+金满箱,银满箱,展眼乞丐人皆谤.
+正叹他人命不长,那知自己归来丧!
+训有方,保不定日后作强梁.
+择膏粱,谁承望流落在烟花巷!
+因嫌纱帽小,致使锁枷杠,昨怜破袄寒,
+今嫌紫蟒长:乱烘烘你方唱罢我登场,反认他乡是故乡.
+甚荒唐,到头来都是为他人作嫁衣裳!
+```
+
+#### 西江月二词
+```
+批宝玉
+无故寻愁觅恨,有时似傻如狂.
+纵然生得好皮囊,腹内原来草莽.
+潦倒不通世务,愚顽怕读文章.
+行为偏僻性乖张,那管世人诽谤!
+富贵不知乐业, 贫穷难耐凄凉.
+可怜辜负好韶光,于国于家无望.
+天下无能第一,古今不肖无双.
+寄言纨绔与膏粱:莫效此儿形状!
+```
+
+#### 护官符
+```
+护官符贾不假, 白玉为堂金作马.
+阿房宫,三百里,住不下金陵一个史.
+东海缺少白玉床, 龙王来请金陵王.
+丰年好大雪, 珍珠如土金如铁.
+```
